[FIX] html_editor: fix hint text wrapping
Description of the issue:

- The placeholder hint text wraps onto multiple lines when the cell width is
  reduced.
- When there is insufficient horizontal space, the text should be truncated
  rather than wrapped.

task-5480080

closes odoo/odoo#243006

--- a/addons/html_editor/static/src/main/hint.scss
+++ b/addons/html_editor/static/src/main/hint.scss
@@ -12,5 +12,8 @@
         pointer-events: none;
         text-align: inherit;
         width: 100%;
+        overflow: hidden;
+        text-wrap: nowrap;
+        text-overflow: ellipsis;
     }
 }
